fix: improve spacing on header
again

--- a/ckanext/nhm/theme/assets/less/nhm.less
+++ b/ckanext/nhm/theme/assets/less/nhm.less
@@ -198,7 +198,7 @@ body {
     width: 100%;
   }
 
-  @media (min-width: @sm) {
+  @media (min-width: @lg) {
     position: absolute !important;
     top: 10px;
     left: 0;
@@ -618,10 +618,6 @@ iframe {
   .palette-header();
   .palette-header-txt();
   .no-hover();
-
-  @media (max-width: @lg - 1) {
-    padding-top: 20px;
-  }
 
   & .logo {
     padding-left: 0;
